Fix whitespace issue below Footer by changing the CSS % margin on TrackIndex

--- a/app/assets/stylesheets/components/footer.scss
+++ b/app/assets/stylesheets/components/footer.scss
@@ -3,13 +3,13 @@
   width: 100%;
   background: #000;
   // trying to make it stick to the bottom
+  position: absolute;
   bottom: 0;
 }
 
 .footer-link-container {
   display: flex;
   justify-content: center;
-  width: 100%;
   height: 100px;
   color: #ffff64;
   padding: 15px;
