--- a/app/assets/stylesheets/components/track_main.scss
+++ b/app/assets/stylesheets/components/track_main.scss
@@ -7,8 +7,8 @@
   padding-top: 30px;
   padding-bottom: 30px;
   padding-left: 15%;
-  margin-top: 60px;
-  margin-bottom: 60px;
+  margin-top: 10px;
+  margin-bottom: 140px;
   border-right: 5px solid $genius-blue;
 }
 
